ProductInventory/src/objects/Sales_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Product_Info__c</fullName>
        <label>Product_Info</label>
        <referenceTo>Product_Info__c</referenceTo>
        <relationshipLabel>Sales_Details</relationshipLabel>
        <relationshipName>Sales_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>sale_date__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>sale_date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sale_price_per_product__c</fullName>
        <label>sale_price</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sale_quantity__c</fullName>
        <label>sale_quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>total_profit__c</fullName>
        <label>total_profit</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>total_sale_price__c</fullName>
        <label>total_sale_price</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Sales_Detail</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Sales_Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales_Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>